# invoke.hpp

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  catch_main.cpp  invoke.hpp  tests.cpp
cmake/: Config.cmake.in
headers/invoke.hpp/: invoke.hpp
scripts/: upload_coverage.sh
untests/: CMakeLists.txt  catch_main.cpp  invoke_tests.cpp
vendors/: CMakeLists.txt
